[gd_scene load_steps=2 format=2]

[ext_resource path="res://Views/MultiplayerLobby.gd" type="Script" id=1]

[node name="MultiplayerLobby" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Columns" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainButtonSection" type="CenterContainer" parent="Columns"]
margin_right = 130.0
margin_bottom = 212.0
size_flags_horizontal = 3

[node name="Rows" type="VBoxContainer" parent="Columns/MainButtonSection"]
margin_top = 30.0
margin_right = 130.0
margin_bottom = 182.0

[node name="HostButton" type="Button" parent="Columns/MainButtonSection/Rows"]
margin_right = 130.0
margin_bottom = 35.0
rect_min_size = Vector2( 130, 35 )
text = "HOST SERVER"

[node name="StartGameButton" type="Button" parent="Columns/MainButtonSection/Rows"]
margin_top = 39.0
margin_right = 130.0
margin_bottom = 74.0
rect_min_size = Vector2( 130, 35 )
text = "START GAME"

[node name="SinglePlayerButton" type="Button" parent="Columns/MainButtonSection/Rows"]
margin_top = 78.0
margin_right = 130.0
margin_bottom = 113.0
rect_min_size = Vector2( 130, 35 )
text = "SINGLE PLAYER"

[node name="JoinButton" type="Button" parent="Columns/MainButtonSection/Rows"]
margin_top = 117.0
margin_right = 130.0
margin_bottom = 152.0
rect_min_size = Vector2( 130, 35 )
text = "JOIN GAME"

[node name="InputSection" type="CenterContainer" parent="Columns"]
margin_left = 134.0
margin_right = 334.0
margin_bottom = 212.0
size_flags_horizontal = 3

[node name="Rows" type="VBoxContainer" parent="Columns/InputSection"]
margin_top = 63.0
margin_right = 200.0
margin_bottom = 149.0

[node name="NameInput" type="LineEdit" parent="Columns/InputSection/Rows"]
margin_right = 200.0
margin_bottom = 30.0
rect_min_size = Vector2( 58, 30 )
text = "Steve"
placeholder_text = "Name"

[node name="IPInput" type="LineEdit" parent="Columns/InputSection/Rows"]
margin_top = 34.0
margin_right = 200.0
margin_bottom = 58.0
text = "127.0.0.1"
placeholder_text = "IP"

[node name="PortInput" type="LineEdit" parent="Columns/InputSection/Rows"]
margin_top = 62.0
margin_right = 200.0
margin_bottom = 86.0
rect_min_size = Vector2( 200, 24 )
text = "5003"
placeholder_text = "Port"

[node name="PlayerLobbySection" type="CenterContainer" parent="Columns"]
margin_left = 338.0
margin_right = 338.0
margin_bottom = 212.0
size_flags_horizontal = 3

[node name="Rows" type="VBoxContainer" parent="Columns/PlayerLobbySection"]
margin_top = 106.0
margin_bottom = 106.0
[connection signal="pressed" from="Columns/MainButtonSection/Rows/HostButton" to="." method="_on_HostButton_pressed"]
[connection signal="pressed" from="Columns/MainButtonSection/Rows/StartGameButton" to="." method="_on_StartGameButton_pressed"]
[connection signal="pressed" from="Columns/MainButtonSection/Rows/SinglePlayerButton" to="." method="_on_StartGameButton_pressed"]
[connection signal="pressed" from="Columns/MainButtonSection/Rows/SinglePlayerButton" to="." method="_on_SinglePlayerButton_pressed"]
[connection signal="pressed" from="Columns/MainButtonSection/Rows/JoinButton" to="." method="_on_JoinButton_pressed"]
